Clean up ChromeKeyboardBoundsObserver and fix for Mash

https://crrev.com/c/1366879 fixed small window repositioning for Mash
but exposed a bug in ChromeKeyboardBoundsObserver::ShouldEnableInsets.

This fixes that issue and includes some cleanup done while debugging.

It also updates the filter file tpo remove tests that are now passing!

Bug: 906888
Change-Id: I64dcfe8de4a5970d69a76f26646b80be01016a50
Reviewed-on: https://chromium-review.googlesource.com/c/1372319
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615752}
Former-commit-id: a9470f46cef9edc682924a80264914bf404c3e70