chrome/browser/ui/ash/keyboard/keyboard_end_to_end_browsertest.cc
@@ -48,15 +48,19 @@ class KeyboardVisibleWaiter : public ChromeKeyboardControllerClient::Observer {
 };  // namespace
 
 bool WaitUntilShown() {
-  if (ChromeKeyboardControllerClient::Get()->is_keyboard_visible())
+  if (ChromeKeyboardControllerClient::Get()->is_keyboard_visible()) {
+    base::RunLoop().RunUntilIdle();  // Allow async operations to complete.
     return true;
+  }
   KeyboardVisibleWaiter(true).Wait();
   return ChromeKeyboardControllerClient::Get()->is_keyboard_visible();
 }
 
 bool WaitUntilHidden() {
-  if (!ChromeKeyboardControllerClient::Get()->is_keyboard_visible())
+  if (!ChromeKeyboardControllerClient::Get()->is_keyboard_visible()) {
+    base::RunLoop().RunUntilIdle();  // Allow async operations to complete.
     return true;
+  }
   KeyboardVisibleWaiter(false).Wait();
   return !ChromeKeyboardControllerClient::Get()->is_keyboard_visible();
 }
@@ -78,8 +82,8 @@ class KeyboardEndToEndTest : public InProcessBrowserTest {
     GURL test_url = ui_test_utils::GetTestUrl(
         base::FilePath("chromeos/virtual_keyboard"), test_file_);
     ui_test_utils::NavigateToURL(browser(), test_url);
-    web_contents = browser()->tab_strip_model()->GetActiveWebContents();
-    ASSERT_TRUE(web_contents);
+    web_contents_ = browser()->tab_strip_model()->GetActiveWebContents();
+    ASSERT_TRUE(web_contents_);
 
     base::RunLoop().RunUntilIdle();
 
@@ -91,7 +95,7 @@ class KeyboardEndToEndTest : public InProcessBrowserTest {
 
  protected:
   // Initialized in |SetUpOnMainThread|.
-  content::WebContents* web_contents;
+  content::WebContents* web_contents_;
 
   explicit KeyboardEndToEndTest(const base::FilePath& test_file)
       : test_file_(test_file) {}
@@ -153,26 +157,26 @@ class KeyboardEndToEndFormTest : public KeyboardEndToEndTest {
 };
 
 IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFormTest, ClickTextFieldShowsKeyboard) {
-  ClickElementWithId(web_contents, "username");
+  ClickElementWithId(web_contents_, "username");
   ASSERT_TRUE(WaitUntilShown());
 }
 
 IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFormTest, ClickBodyHidesKeyboard) {
-  ClickElementWithId(web_contents, "username");
+  ClickElementWithId(web_contents_, "username");
   ASSERT_TRUE(WaitUntilShown());
 
   content::SimulateMouseClickAt(
-      web_contents, 0, blink::WebMouseEvent::Button::kLeft, gfx::Point(0, 0));
+      web_contents_, 0, blink::WebMouseEvent::Button::kLeft, gfx::Point(0, 0));
   ASSERT_TRUE(WaitUntilHidden());
 }
 
 IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFormTest,
                        ChangeInputTypeToTextDoesNotHideKeyboard) {
-  ClickElementWithId(web_contents, "username");
+  ClickElementWithId(web_contents_, "username");
   ASSERT_TRUE(WaitUntilShown());
 
   ASSERT_TRUE(
-      content::EvalJs(web_contents,
+      content::EvalJs(web_contents_,
                       "document.getElementById('username').type = 'password'")
           .error.empty());
 
@@ -182,11 +186,11 @@ IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFormTest,
 
 IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFormTest,
                        ChangeInputTypeToNonTextHidesKeyboard) {
-  ClickElementWithId(web_contents, "username");
+  ClickElementWithId(web_contents_, "username");
   ASSERT_TRUE(WaitUntilShown());
 
   ASSERT_TRUE(
-      content::EvalJs(web_contents,
+      content::EvalJs(web_contents_,
                       "document.getElementById('username').type = 'submit'")
           .error.empty());
 
@@ -195,11 +199,11 @@ IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFormTest,
 
 IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFormTest,
                        ChangeInputToReadOnlyHidesKeyboard) {
-  ClickElementWithId(web_contents, "username");
+  ClickElementWithId(web_contents_, "username");
   ASSERT_TRUE(WaitUntilShown());
 
   ASSERT_TRUE(
-      content::EvalJs(web_contents,
+      content::EvalJs(web_contents_,
                       "document.getElementById('username').readOnly = true")
           .error.empty());
 
@@ -208,10 +212,10 @@ IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFormTest,
 
 IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFormTest,
                        ChangeInputModeToNumericDoesNotHideKeyboard) {
-  ClickElementWithId(web_contents, "username");
+  ClickElementWithId(web_contents_, "username");
   ASSERT_TRUE(WaitUntilShown());
 
-  ASSERT_TRUE(content::EvalJs(web_contents,
+  ASSERT_TRUE(content::EvalJs(web_contents_,
                               "document.getElementById('username')."
                               "setAttribute('inputmode', 'numeric')")
                   .error.empty());
@@ -222,10 +226,10 @@ IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFormTest,
 
 IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFormTest,
                        ChangeInputModeToNoneHidesKeyboard) {
-  ClickElementWithId(web_contents, "username");
+  ClickElementWithId(web_contents_, "username");
   ASSERT_TRUE(WaitUntilShown());
 
-  ASSERT_TRUE(content::EvalJs(web_contents,
+  ASSERT_TRUE(content::EvalJs(web_contents_,
                               "document.getElementById('username')."
                               "setAttribute('inputmode', 'none')")
                   .error.empty());
@@ -234,10 +238,10 @@ IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFormTest,
 }
 
 IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFormTest, DeleteInputHidesKeyboard) {
-  ClickElementWithId(web_contents, "username");
+  ClickElementWithId(web_contents_, "username");
   ASSERT_TRUE(WaitUntilShown());
 
-  ASSERT_TRUE(content::EvalJs(web_contents,
+  ASSERT_TRUE(content::EvalJs(web_contents_,
                               "document.getElementById('username').remove()")
                   .error.empty());
 
@@ -257,7 +261,7 @@ class KeyboardEndToEndFocusTest : public KeyboardEndToEndTest {
 IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFocusTest,
                        TriggerInputFocusWithoutUserGestureDoesNotShowKeyboard) {
   ASSERT_TRUE(
-      content::EvalJs(web_contents, "document.getElementById('text').focus()")
+      content::EvalJs(web_contents_, "document.getElementById('text').focus()")
           .error.empty());
 
   base::RunLoop().RunUntilIdle();  // Allow async operations to complete.
@@ -266,7 +270,7 @@ IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFocusTest,
 
 IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFocusTest,
                        TriggerInputFocusFromUserGestureShowsKeyboard) {
-  ClickElementWithId(web_contents, "sync");
+  ClickElementWithId(web_contents_, "sync");
 
   ASSERT_TRUE(WaitUntilShown());
 }
@@ -274,7 +278,7 @@ IN_PROC_BROWSER_TEST_F(KeyboardEndToEndFocusTest,
 IN_PROC_BROWSER_TEST_F(
     KeyboardEndToEndFocusTest,
     TriggerAsyncInputFocusFromUserGestureDoesNotShowKeyboard) {
-  ClickElementWithId(web_contents, "async");
+  ClickElementWithId(web_contents_, "async");
 
   base::RunLoop().RunUntilIdle();  // Allow async operations to complete.
   EXPECT_FALSE(ChromeKeyboardControllerClient::Get()->is_keyboard_visible());
@@ -285,23 +289,23 @@ IN_PROC_BROWSER_TEST_F(
     TriggerAsyncInputFocusFromUserGestureAfterBlurShowsKeyboard) {
   // If async focus occurs quickly after blur, then it should still invoke the
   // keyboard.
-  ClickElementWithId(web_contents, "text");
+  ClickElementWithId(web_contents_, "text");
   ASSERT_TRUE(WaitUntilShown());
 
-  ClickElementWithId(web_contents, "blur");
+  ClickElementWithId(web_contents_, "blur");
   ASSERT_TRUE(WaitUntilHidden());
 
-  ClickElementWithId(web_contents, "async");
+  ClickElementWithId(web_contents_, "async");
   ASSERT_TRUE(WaitUntilShown());
 }
 
 IN_PROC_BROWSER_TEST_F(
     KeyboardEndToEndFocusTest,
     TriggerAsyncInputFocusFromUserGestureAfterBlurTimeoutDoesNotShowKeyboard) {
-  ClickElementWithId(web_contents, "text");
+  ClickElementWithId(web_contents_, "text");
   ASSERT_TRUE(WaitUntilShown());
 
-  ClickElementWithId(web_contents, "blur");
+  ClickElementWithId(web_contents_, "blur");
   ASSERT_TRUE(WaitUntilHidden());
 
   // Wait until the transient blur threshold (3500ms) passes.
@@ -309,7 +313,7 @@ IN_PROC_BROWSER_TEST_F(
   // actually waiting in real time.
   base::PlatformThread::Sleep(base::TimeDelta::FromMilliseconds(3501));
 
-  ClickElementWithId(web_contents, "async");
+  ClickElementWithId(web_contents_, "async");
   base::RunLoop().RunUntilIdle();  // Allow async operations to complete.
   EXPECT_FALSE(ChromeKeyboardControllerClient::Get()->is_keyboard_visible());
 }
@@ -320,7 +324,7 @@ class KeyboardEndToEndOverscrollTest : public KeyboardEndToEndTest {
       : KeyboardEndToEndTest(base::FilePath("form.html")) {}
   ~KeyboardEndToEndOverscrollTest() override {}
 
-  void FocusAndShowKeyboard() { ClickElementWithId(web_contents, "username"); }
+  void FocusAndShowKeyboard() { ClickElementWithId(web_contents_, "username"); }
 
   void HideKeyboard() {
     auto* controller = ChromeKeyboardControllerClient::Get();
@@ -343,17 +347,17 @@ IN_PROC_BROWSER_TEST_F(KeyboardEndToEndOverscrollTest,
   browser()->window()->Maximize();
   aura::test::WaitForAllChangesToComplete();
 
-  const int old_height = GetViewportHeight(web_contents);
+  const int old_height = GetViewportHeight(web_contents_);
 
   FocusAndShowKeyboard();
   ASSERT_TRUE(WaitUntilShown());
 
-  EXPECT_LT(GetViewportHeight(web_contents), old_height);
+  EXPECT_LT(GetViewportHeight(web_contents_), old_height);
 
   HideKeyboard();
   ASSERT_TRUE(WaitUntilHidden());
 
-  EXPECT_EQ(GetViewportHeight(web_contents), old_height);
+  EXPECT_EQ(GetViewportHeight(web_contents_), old_height);
 }
 
 IN_PROC_BROWSER_TEST_F(
@@ -366,17 +370,17 @@ IN_PROC_BROWSER_TEST_F(
       gfx::Rect(0, 0, screen_bounds.width(), screen_bounds.height() / 2));
   aura::test::WaitForAllChangesToComplete();
 
-  const int old_height = GetViewportHeight(web_contents);
+  const int old_height = GetViewportHeight(web_contents_);
 
   FocusAndShowKeyboard();
   ASSERT_TRUE(WaitUntilShown());
 
-  EXPECT_EQ(GetViewportHeight(web_contents), old_height);
+  EXPECT_EQ(GetViewportHeight(web_contents_), old_height);
 
   HideKeyboard();
   ASSERT_TRUE(WaitUntilHidden());
 
-  EXPECT_EQ(GetViewportHeight(web_contents), old_height);
+  EXPECT_EQ(GetViewportHeight(web_contents_), old_height);
 }
 
 IN_PROC_BROWSER_TEST_F(
@@ -392,7 +396,7 @@ IN_PROC_BROWSER_TEST_F(
   aura::test::WaitForAllChangesToComplete();
 
   const auto old_browser_bounds = browser()->window()->GetBounds();
-  const int old_height = GetViewportHeight(web_contents);
+  const int old_height = GetViewportHeight(web_contents_);
 
   FocusAndShowKeyboard();
   ASSERT_TRUE(WaitUntilShown());
@@ -400,13 +404,13 @@ IN_PROC_BROWSER_TEST_F(
   EXPECT_LT(browser()->window()->GetBounds().y(), old_browser_bounds.y());
   EXPECT_EQ(browser()->window()->GetBounds().height(),
             old_browser_bounds.height());
-  EXPECT_EQ(GetViewportHeight(web_contents), old_height);
+  EXPECT_EQ(GetViewportHeight(web_contents_), old_height);
 
   HideKeyboard();
   ASSERT_TRUE(WaitUntilHidden());
 
   EXPECT_EQ(browser()->window()->GetBounds(), old_browser_bounds);
-  EXPECT_EQ(GetViewportHeight(web_contents), old_height);
+  EXPECT_EQ(GetViewportHeight(web_contents_), old_height);
 }
 
 IN_PROC_BROWSER_TEST_F(
@@ -422,7 +426,7 @@ IN_PROC_BROWSER_TEST_F(
   aura::test::WaitForAllChangesToComplete();
 
   const auto old_browser_bounds = browser()->window()->GetBounds();
-  const int old_height = GetViewportHeight(web_contents);
+  const int old_height = GetViewportHeight(web_contents_);
 
   FocusAndShowKeyboard();
   ASSERT_TRUE(WaitUntilShown());
@@ -430,11 +434,11 @@ IN_PROC_BROWSER_TEST_F(
   EXPECT_LT(browser()->window()->GetBounds().y(), old_browser_bounds.y());
   EXPECT_EQ(browser()->window()->GetBounds().height(),
             old_browser_bounds.height());
-  EXPECT_LT(GetViewportHeight(web_contents), old_height);
+  EXPECT_LT(GetViewportHeight(web_contents_), old_height);
 
   HideKeyboard();
   ASSERT_TRUE(WaitUntilHidden());
 
   EXPECT_EQ(browser()->window()->GetBounds(), old_browser_bounds);
-  EXPECT_EQ(GetViewportHeight(web_contents), old_height);
+  EXPECT_EQ(GetViewportHeight(web_contents_), old_height);
 }
